# AI-Modules-Hub

./: .buildinfo  .travis.yml  AUTHORS.rst  Attention.html  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  api.html  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements_dev.txt  search.html  searchindex.js  setup.py  tox.ini  usage.html
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
_modules/: index.html
_modules/ai_modules_hub/Attention/: CoordinateAttention.html  MobileViTAttention.html
_modules/ai_modules_hub/Head/: ssd_head.html
_modules/ai_modules_hub/conv/: DepthwiseSeparableConvolution.html
_modules/ai_modules_hub/utils/loss/: FocalLoss.html
_sources/: api.rst.txt  index.rst.txt
docs/: Attention.rst  Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/ai_modules_hub/: __init__.py
src/ai_modules_hub/Attention/: CoordinateAttention.py  MobileViTAttention.py  __init__.py
src/ai_modules_hub/Backbone/: FPN.py
src/ai_modules_hub/Head/: __init__.py  ssd_head.py
src/ai_modules_hub/conv/: DepthwiseSeparableConvolution.py  __init__.py
src/ai_modules_hub/utils/loss/: FocalLoss.py  __init__.py
tests/: __init__.py  test_Attention.py  test_Attention_Coordinate.py  test_ai_modules_hub.py  test_conv.py
